--- a/moodclient/AndroidManifest.xml
+++ b/moodclient/AndroidManifest.xml
@@ -1,42 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.hsrm.mi.mobcomp.y2k11grp04"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	package="de.hsrm.mi.mobcomp.y2k11grp04" android:versionCode="1"
+	android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="7" />
+	<uses-sdk android:minSdkVersion="7" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name=".GroupMoodActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name">
+		<activity android:name=".GroupMoodActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="groupmood" >
-                </data>
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".MeetingActivity"
-            android:label="@string/app_name" >
-        </activity>
+				<data android:scheme="groupmood.chair" />
+				<data android:scheme="groupmood.attendee" />
+				<data android:scheme="groupmood.chair+https" />
+				<data android:scheme="groupmood.attendee+https" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".AttendeeActivity" android:label="@string/app_name">
+		</activity>
+		<activity android:name=".ChairActivity" android:label="@string/app_name">
+		</activity>
+		<service android:name=".service.MoodServerService"
+			android:process=":process" />
+	</application>
 
-        <service
-            android:name=".service.MoodServerService"
-            android:process=":process" />
-    </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
