--- a/democlient/AndroidManifest.xml
+++ b/democlient/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".functions.MasterRatingActivity"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".functions.SlideRatingActivity" >
+        <activity android:name=".functions.TopicRatingActivity" >
         </activity>
 
         <service
