--- a/moodclient/AndroidManifest.xml
+++ b/moodclient/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:label="@string/app_name" >
         <activity
             android:name=".LaunchActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,24 +38,11 @@
             android:process=":process" />
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar" />
-        
-        <activity
             android:name=".QuestionActivity"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar"
             />
         
-        <activity
-            android:name=".CommentActivity"
-            android:label="@string/app_name"
-            />
-        
-        <activity
-            android:name=".ResultActivity"
-            android:label="@string/app_name"
-            />
     </application>
 
 </manifest>
