--- a/moodclient/AndroidManifest.xml
+++ b/moodclient/AndroidManifest.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.hsrm.mi.mobcomp.y2k11grp04"
-    android:versionCode="2"
-    android:versionName="0.2" >
+    android:versionCode="4"
+    android:versionName="0.3.1" >
 
     <uses-sdk android:minSdkVersion="7" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
             android:name=".LaunchActivity"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.NoTitleBar"
-            >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,14 +45,11 @@
         <activity
             android:name=".QuestionActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar"
-            />
-        
+            android:theme="@android:style/Theme.NoTitleBar" />
+
         <provider
-			android:name=".persistence.Provider"
-			android:authorities="de.hsrm.mi.mobcomp.y2k11grp04.provider.content"
-			/>
-        
+            android:name=".persistence.Provider"
+            android:authorities="de.hsrm.mi.mobcomp.y2k11grp04.provider.content" />
     </application>
 
 </manifest>
