--- a/moodclient/AndroidManifest.xml
+++ b/moodclient/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".LaunchActivity"
+            android:name=".activity.LaunchActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
@@ -43,7 +43,7 @@
             android:process=":process" />
 
         <activity
-            android:name=".QuestionActivity"
+            android:name=".activity.QuestionActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" />
 
